--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 body {
     background-color: lightblue;
     font-family: 'Courier New', Courier, monospace;
+    margin: 50px;
 }
 
 h1 {
     text-align: center;
     font-weight: bold;
-    padding: 40px;
+    margin-bottom: 30px;
+}
+
+#miltonStapler {
+margin: 20px;
+
 }
