--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ h1 {
     margin-bottom: 30px;
 }
 
+.Milton-container {
+    text-align: center;
+}
 
+.Milton {
+    display: inline-block
+}
 
 
