--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ h1 {
     margin-bottom: 30px;
 }
 
+h2, p {
+    text-align: center;
+}
+
 .Milton-container {
     text-align: center;
 }
@@ -17,5 +21,6 @@ h1 {
 .Milton {
     display: inline-block
 }
+
 
 
